--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -1,3 +1,13 @@
-<p>
-  course-card works!
-</p>
+<div class="course-card">
+
+    <div class="course-title">
+        {{course.description}}
+    </div>
+    <img width="300" alt="Angular Logo"
+         [src]="course.iconUrl">
+
+    <div class="course-description">
+        {{course.longDescription}}
+    </div>
+
+</div>
