--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 
     <course-card
         *ngFor="let course of courses"
+        (courseSelected)="onCourseSelected($event)"
         [course]="course">
     </course-card>
 
