working on the card comp

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,22 @@
 <div class="courses">
 
     <course-card
-        *ngFor="let course of courses"
+        *ngFor="let course of courses; index as i"
         (courseSelected)="onCourseSelected($event)"
-        [course]="course">
+        [course]="course"
+        [cardIndex]="i + 1">
     </course-card>
+<!-- 
+    <course-card
+        *ngFor="let course of courses; index as i; first as isFirst; last as isLast; evan as isEven; odd as isOdd"
+        [class.is-first]="isFirst"
+        [class.is-last]="isLast"
+        [class.is-even]="isEven"
+        [class.is-odd]="isOdd"
+        (courseSelected)="onCourseSelected($event)"
+        [course]="course"
+        [cardIndex]="i + 1">
+    </course-card> -->
 
 </div>
 
