--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -15,10 +15,16 @@
     <ng-template #noImage>
         <p>No image is available.</p>
     </ng-template>
-    
 
     <div class="course-description">
         {{course.longDescription}}
+    </div>
+
+    <div class="course-category" [ngSwitch]="course.category">
+        <div class="category" *ngSwitchCase="'BEGINNER'">Beginner</div>
+        <div class="category" *ngSwitchCase="'INTERMEDIATE'">Intermediate</div>
+        <div class="category" *ngSwitchCase="'ADVANCED'">Advanced</div>
+        <div class="category" *ngSwitchDefault>All Levels</div>
     </div>
 
     <button (click)="onCourseViewed()">View Course</button>
