--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,26 @@
 
 </div>
 
+<!-- <div class="demo">
+    <div>Start Date: {{ startDate | date: 'MM/dd/yyyy' }}</div>
+    <div>{{ title | titlecase }}</div>
+    <div>{{ price | number: '3.3-5' }}</div>
+    <div>{{ price | currency : 'EUR' }}</div>
+    <div>{{ rate | percent }}</div>
+    {{ courses | json }}
+</div> -->
+
+<!-- <div>
+    <div *ngFor="let pair of course | keyvalue">
+        {{pair.key}} {{pair.value}}
+    </div>
+</div> -->
+
 
 <div class="courses">
 
     <course-card
-        *ngFor="let course of courses; index as i"
+        *ngFor="let course of courses | slice:0:3; index as i"
         (courseSelected)="onCourseSelected($event)"
         [course]="course"
         [cardIndex]="i + 1">
