--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,11 +24,20 @@
 <div class="courses">
 
     <course-card
+        (courseSelected)="onCourseSelected($event)"
+        [course]="courses[0]">
+    </course-card>
+    <course-card
+        (courseSelected)="onCourseSelected($event)"
+        [course]="courses[1]">
+    </course-card>
+
+    <!-- <course-card
         *ngFor="let course of courses | slice:0:3; index as i"
         (courseSelected)="onCourseSelected($event)"
         [course]="course"
         [cardIndex]="i + 1">
-    </course-card>
+    </course-card> -->
 <!-- 
     <course-card
         *ngFor="let course of courses; index as i; first as isFirst; last as isLast; evan as isEven; odd as isOdd"
