learning more about viewChild

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,15 +21,15 @@
 </div> -->
 
 
-<div class="courses">
+<div class="courses" #container>
 
-    <course-card
+    <course-card #cardRef1
         (courseSelected)="onCourseSelected($event)"
         [course]="courses[0]">
     </course-card>
-    <course-card
+    <course-card #cardRef2
         (courseSelected)="onCourseSelected($event)"
-        [course]="courses[1]">
+        [course]="courses[0]">
     </course-card>
 
     <!-- <course-card
