--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
 
 </div>
 
+<button (click)="onCoursesEdited()">Edit Courses</button>
+
 <!-- <div class="demo">
     <div>Start Date: {{ startDate | date: 'MM/dd/yyyy' }}</div>
     <div>{{ title | titlecase }}</div>
@@ -23,15 +25,21 @@
 
 <div class="courses" #container>
 
-    <course-card #cardRef1
+    <!-- <course-card #cardRef1
         (courseSelected)="onCourseSelected($event)"
         [course]="courses[0]">
     </course-card>
     <course-card #cardRef2
         (courseSelected)="onCourseSelected($event)"
-        [course]="courses[0]">
-    </course-card>
+        [course]="courses[1]">
+    </course-card> -->
 
+    <course-card
+        *ngFor="let course of courses; index as i"
+        (courseSelected)="onCourseSelected($event)"
+        [course]="course"
+        [cardIndex]="i + 1">
+    </course-card>
     <!-- <course-card
         *ngFor="let course of courses | slice:0:3; index as i"
         (courseSelected)="onCourseSelected($event)"
