--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -4,9 +4,9 @@
     [ngClass]="cardClasses()">
 
     <div class="course-title">
-        {{ cardIndex || ''  + ' ' + course.description }}
+        {{ cardIndex + ' ' + course.description }}
     </div>
-    <img
+    <img #courseImage
         *ngIf="isImageVisible(); else noImage"
         width="300"
         alt="Angular Logo"
