--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -7,7 +7,7 @@
         {{ cardIndex + ' ' + course.description }}
     </div>
 
-    <ng-content>
+    <ng-content select="img">
 
     </ng-content>
     
