--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -1,4 +1,5 @@
 <div
+    #container
     *ngIf="course"
     class="course-card"
     [ngClass]="cardClasses()">
@@ -7,14 +8,8 @@
         {{ cardIndex + ' ' + course.description }}
     </div>
 
-    <ng-content select="img">
-
+    <ng-content select="course-image">
     </ng-content>
-    
-
-    <div class="course-description">
-        {{course.longDescription}}
-    </div>
 
     <div class="course-category" [ngSwitch]="course.category">
         <div class="category" *ngSwitchCase="'BEGINNER'">Beginner</div>
@@ -22,6 +17,9 @@
         <div class="category" *ngSwitchCase="'ADVANCED'">Advanced</div>
         <div class="category" *ngSwitchDefault>All Levels</div>
     </div>
+
+    <ng-content select=".course-description">
+    </ng-content>
 
     <button (click)="onCourseViewed()">View Course</button>
 
