--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,14 +25,22 @@
 
 <div class="courses" #container>
 
+    <ng-template #blankImage let-courseName="description">
+        <p class="warn">{{courseName}} has no image available.</p>
+
+        <img src="/assets/empty-image.png">
+
+    </ng-template>
+
     <course-card
         *ngIf="courses[0] as course"
         (courseSelected)="onCourseSelected($event)"
+        [noImageTpl]="blankImage"
         [course]="course">
         
         <course-image [src]="course.iconUrl"></course-image>
-        <course-image [src]="courses[1].iconUrl"></course-image>
-        <course-image [src]="courses[2].iconUrl"></course-image>
+        <!-- <course-image [src]="courses[1].iconUrl"></course-image>
+        <course-image [src]="courses[2].iconUrl"></course-image> -->
 
         <div class="course-description">
             {{course.longDescription}}
