--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -8,8 +8,16 @@
         {{ cardIndex + ' ' + course.description }}
     </div>
 
-    <ng-content select="course-image">
+    <ng-content select="course-image" *ngIf="course.iconUrl; else noImage">
     </ng-content>
+
+    <ng-template #noImage>
+        <ng-container *ngTemplateOutlet="noImageTpl; context: { description: course.description }">
+          content
+        </ng-container>
+        
+    </ng-template>
+    
 
     <div class="course-category" [ngSwitch]="course.category">
         <div class="category" *ngSwitchCase="'BEGINNER'">Beginner</div>
