--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,10 @@
             (courseSelected)="onCourseSelected($event)"
             [course]="course">
 
-        <course-image [src]="course.iconUrl"></course-image>
+        <course-image
+            [src]="course.iconUrl"
+            *ngxUnless="">
+        </course-image>
 
         <div class="course-description" (dblclick)="highlighter.toggle()">
             {{ course.longDescription }}
