--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 
         <course-image
             [src]="course.iconUrl"
-            *ngxUnless="">
+            *ngxUnless="!course.iconUrl">
         </course-image>
 
         <div class="course-description" (dblclick)="highlighter.toggle()">
